--- a/podcast-app/package.json
+++ b/podcast-app/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.12.1",
+    "swiper": "^9.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
